--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-#spring.datasource.url=jdbc:mysql://localhost:3306/paygo
-spring.datasource.url=jdbc:mysql://paygo.c19jldgqfd2v.eu-north-1.rds.amazonaws.com:3306/paygo
+spring.datasource.url=jdbc:mysql://localhost:3306/paygo
+#spring.datasource.url=jdbc:mysql://paygo.c19jldgqfd2v.eu-north-1.rds.amazonaws.com:3306/paygo
 spring.datasource.username=root
 spring.datasource.password=victoria1992
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -40,3 +40,4 @@ adminLastName=Admin
 adminPass=12345
 
 server.port=8080
+account_number_length=7
